[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Gilvan Wanderley <gilvan.wanderley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
